Implemented ReCaptcha. Fixed "undefined" error issue with the JSON Drupal fields. More code clean up and CSS adjustments. Still a work in progress.

--- a/src/shared.scss
+++ b/src/shared.scss
@@ -1,14 +1,14 @@
 @import "node_modules/foundation-sites/scss/_global.scss";
 @import "node_modules/foundation-sites/scss/settings/_settings.scss";
-@import "node_modules/foundation-sites/scss/prototype/_spacing.scss";
-@import "node_modules/foundation-sites/scss/prototype/_separator.scss";
-@import "node_modules/foundation-sites/scss/forms/_progress.scss";
-@import "node_modules/foundation-sites/scss/components/_table.scss";
-@import "node_modules/foundation-sites/scss/components/_thumbnail.scss";
-@import "node_modules/foundation-sites/scss/components/_switch.scss";
-@import "node_modules/foundation-sites/scss/components/_breadcrumbs.scss";
-@import "node_modules/foundation-sites/scss/components/_media-object.scss";
-@import "node_modules/foundation-sites/scss/components/_pagination.scss";
-@import "node_modules/foundation-sites/scss/components/_card.scss";
-@import "node_modules/foundation-sites/scss/components/_button.scss";
-//@import "assets/foundation/scss/topbar-responsive.scss";
+//@import "node_modules/foundation-sites/scss/prototype/_spacing.scss";
+//@import "node_modules/foundation-sites/scss/prototype/_separator.scss";
+//@import "node_modules/foundation-sites/scss/forms/_progress.scss";
+//@import "node_modules/foundation-sites/scss/components/_table.scss";
+//@import "node_modules/foundation-sites/scss/components/_thumbnail.scss";
+//@import "node_modules/foundation-sites/scss/components/_switch.scss";
+//@import "node_modules/foundation-sites/scss/components/_breadcrumbs.scss";
+//@import "node_modules/foundation-sites/scss/components/_media-object.scss";
+//@import "node_modules/foundation-sites/scss/components/_pagination.scss";
+//@import "node_modules/foundation-sites/scss/components/_card.scss";
+//@import "node_modules/foundation-sites/scss/components/_button.scss";
+////@import "assets/foundation/scss/topbar-responsive.scss";
