--- a/src/App.css
+++ b/src/App.css
@@ -166,46 +166,9 @@
       color: #4a4a4a;
       transition: color 0.3s ease-in; }
 
-/* Zurb Foundation "CSS Grid - Staggered Grid" template */
-.header-grid {
-  width: 100%;
-  height: 100vh;
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-areas: "big-top big-top big-top small-top small-top" "small-middle small-middle big-middle big-middle big-middle" "big-bottom big-bottom big-bottom big-bottom big-bottom"; }
-
-.block {
-  height: 100%;
-  width: 100%;
-  border: 1px solid white;
-  background: black;
-  opacity: 0.8;
-  transition: opacity 0.2s ease-out; }
-  .block:hover {
-    transition: opacity 0.2s ease-in;
-    opacity: 1; }
-
-#b1 {
-  grid-area: big-top; }
-
-#b2 {
-  grid-area: small-top; }
-
-#b3 {
-  grid-area: small-middle; }
-
-#b4 {
-  grid-area: big-middle; }
-
-.bottom-block {
-  grid-area: big-bottom;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr; }
-
 /* Zurb Foundation "Flip Card" template */
 .flip-card {
-  perspective: 1000;
+  perspective: 1000px;
   border: 0;
   background: transparent; }
   .flip-card:hover .flip-card-inner,
@@ -359,6 +322,8 @@
     align-items: center; }
   .contact-panel .submit-button {
     margin-bottom: 0; }
+  .contact-panel .button {
+    margin: 0 0 0 .5rem; }
   .contact-panel .cancel-button {
     margin-bottom: 0;
     padding: 0.75rem 1rem;
@@ -375,7 +340,8 @@
       right: 0; } }
 
 /* Custom CSS */
-#root {}
+#root {
+  /*background-color: black;*/ }
 
 .app {
   font-size: 18px;
@@ -385,6 +351,19 @@
 main {
   padding-top: 20px;
   padding-bottom: 20px; }
+  main .msg-sent {
+    margin: 10px 10px 30px;
+    font-size: 20px;
+    color: lightgreen;
+    text-align: center;
+    position: absolute;
+    left: 33.3%;
+    z-index: 10;
+    top: 25px; }
+    main .msg-sent.hidden {
+      display: none; }
+  main .page-heading {
+    padding: 0 20px 10px; }
 
 h6 {
   margin: 1.0em 0 0.5em;
@@ -415,12 +394,15 @@ h6 {
 
 /* CMS content */
 .content-container {
-  padding: 10px 20px; }
+  padding: 0 20px 10px; }
+  .content-container__head {
+    padding: 0; }
   .content-container__head, .content-container__body {
-    background-color: #fefefe;
+    background-color: #fefefe; }
+  .content-container__body {
     padding: 20px; }
-  .content-container__body ul li {
-    list-style: square; }
+    .content-container__body ul li {
+      list-style: square; }
 
 .callout {
   border: 1px solid #eee;
@@ -462,23 +444,36 @@ h6 {
 
 .da-membership-badge {
   margin: 0 auto;
-  width: 217px; }
+  width: 217px;
+  /* background-color: $main-bg-color; */ }
 
 .social-footer {
   background-color: #2c3840;
-  color: #fefefe;
-  padding: 1.5rem 1rem; }
+  color: #fefefe; }
   .social-footer .hidden {
     display: none; }
   .social-footer p {
     margin-bottom: 0; }
 
+.recaptcha {
+  margin: 10px 0; }
+
 /* From Zurb Foundation "Popup Contact Form" template */
 .contact-panel .contact-panel-actions {
   margin-top: 10px; }
 
-/* Small devices media queries */
+.hidden {
+  color: #fff;
+  display: none; }
+
+/* Media queries */
 @media screen and (max-width: 39.9375em) {
+  main .msg-sent {
+    margin: 0 0 20px;
+    font-size: 15px;
+    color: green;
+    text-align: center;
+    position: static; }
   .top-bar.logo.topbar-responsive .top-bar-title a img {
     max-width: 280px; }
   .social-footer-left, .social-footer-icons {
@@ -487,13 +482,13 @@ h6 {
     margin: 0; }
     .social-footer-icons ul.menu li a {
       padding: 0.7rem 1rem; }
-  .content-container {
-    padding: 10px 0; }
-    .content-container__head {
-      padding-top: 0; }
-    .content-container__body {
-      padding: 0; }
   .medium-up-2 > .column, .medium-up-2 > .columns {
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
-    max-width: 100%; } }
+    max-width: 100%; }
+    .medium-up-2 > .column .flip-card-inner-front, .medium-up-2 > .columns .flip-card-inner-front {
+      background-size: 100% 100%; }
+    .medium-up-2 > .column .flip-card-inner-back .flip-card-inner-back-text, .medium-up-2 > .columns .flip-card-inner-back .flip-card-inner-back-text {
+      font-size: 15px; }
+    .medium-up-2 > .column .flip-card-inner-back .button.success, .medium-up-2 > .columns .flip-card-inner-back .button.success {
+      font-size: 14px; } }
