--- a/src/App.scss
+++ b/src/App.scss
@@ -251,77 +251,13 @@ $topbar-responsive-animation-type: fade-in; // or use slide-down or none
   }
 }
 
-/* Zurb Foundation "CSS Grid - Staggered Grid" template */
-
-.header-grid {
-  width: 100%;
-  height: 100vh;
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-areas: 
-  "big-top big-top big-top small-top small-top"
-  "small-middle small-middle big-middle big-middle big-middle"
-  "big-bottom big-bottom big-bottom big-bottom big-bottom";
-}
-
-.block {
-  height: 100%;
-  width: 100%;
-  border: 1px solid white;
-  background: black;
-  opacity: 0.8;
-  transition: opacity 0.2s ease-out;
-  
-  &:hover {
-    transition: opacity 0.2s ease-in;
-    opacity: 1;
-    
-  }
-}
-
-#b1 {
-  grid-area: big-top;
-}
-
-#b2 {
-  grid-area :small-top;
-}
-
-#b3 {
-  grid-area: small-middle;
-}
-
-#b4 {
-  grid-area: big-middle;
-}
-
-.bottom-block {
-  grid-area: big-bottom;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  
-}
-
-#b5 {
-  
-}
-
-#b6 {
-  
-}
-
-#b7 {
-  
-}
-
 /* Zurb Foundation "Flip Card" template */
 
 $flip-card-height: rem-calc(320);
 $flip-card-transition-speed: 0.6s;
 
 .flip-card {
-  perspective: 1000;
+  perspective: 1000px;
   border: 0;
   background: transparent;
 
@@ -518,6 +454,10 @@ $contact-panel-button-arrow: ⥣;
     margin-bottom: 0;
   }
 
+  .button {
+    margin: 0 0 0 .5rem;
+  }
+
   .cancel-button {
     margin-bottom: 0;
     padding: 0.75rem 1rem;
@@ -540,8 +480,6 @@ $contact-panel-button-arrow: ⥣;
   }
 }
 
-
-
 /* Custom CSS */
 
 #root {
@@ -558,6 +496,22 @@ main {
   padding-top: 20px;
   padding-bottom: 20px;
   //background-color: $main-bg-color;
+  .msg-sent {
+    margin: 10px 10px 30px;
+    font-size: 20px;
+    color: lightgreen;
+    text-align: center;
+    position: absolute;
+    left: 33.3%;
+    z-index: 10;
+    top: 25px;
+    &.hidden {
+      display: none;
+    }
+  }
+  .page-heading {
+    padding: 0 20px 10px;
+  }
 }
 
 h6 {
@@ -606,13 +560,15 @@ h6 {
 
 .content-container {
   //background-color: $main-bg-color;
-  padding: 10px 20px;
-  &__head {}
+  padding: 0 20px 10px;
+  &__head {
+    padding: 0;
+  }
   &__head, &__body {
     background-color: $white;
-    padding: 20px;
   }
   &__body {
+    padding: 20px;
     ul {
       li {
         list-style: square;
@@ -681,9 +637,6 @@ h6 {
 }
 
 .social-footer {
-  //position: fixed;
-  //bottom: 0;
-  //width: 100%;
   background-color: $topbar-responsive-bg;
   color: $white;
   .hidden {
@@ -694,6 +647,10 @@ h6 {
   }
 }
 
+.recaptcha {
+  margin: 10px 0;
+}
+
 /* From Zurb Foundation "Popup Contact Form" template */
 
 .contact-panel {
@@ -702,9 +659,23 @@ h6 {
   }
 }
 
+.hidden {
+  color: #fff;
+  display: none;
+}
+
 /* Media queries */
 
 @media screen and (max-width: 39.9375em) {
+  main {
+    .msg-sent {
+      margin: 0 0 20px;
+      font-size: 15px;
+      color: green;
+      text-align: center;
+      position: static;
+    }
+  }
   .top-bar.logo.topbar-responsive .top-bar-title a img {
     max-width: 280px;
   }
@@ -721,19 +692,25 @@ h6 {
     }
   }
   // Content
-  .content-container {
-    padding: 10px 0;
-    &__head {
-      padding-top: 0;
-    }
-    &__body {
-      padding: 0;
-    }
-  }
+  .content-container {}
   // Cards
   .medium-up-2 > .column, .medium-up-2 > .columns {
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
+    .flip-card-inner-front {
+      //background-size: contain;
+      background-size: 100% 100%;
+    }
+    .flip-card-inner-back {
+      .flip-card-inner-back-text {
+        font-size: 15px;
+      }
+      .button {
+        &.success {
+          font-size: 14px;
+        }
+      }
+    }
   }
 }
