--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,70 @@
 @charset "UTF-8";
-.App {
-  text-align: center; }
+/* From Zurb Foundation "Popup Contact Form" template */
+.topbar-responsive {
+  background: #2c3840;
+  padding: 1rem 1.5rem; }
+  .topbar-responsive .topbar-responsive-logo {
+    color: #fefefe;
+    vertical-align: middle; }
+  .topbar-responsive .menu {
+    background: #2c3840; }
+    .topbar-responsive .menu li:last-of-type {
+      margin-right: 0; }
+    .topbar-responsive .menu a {
+      color: #fefefe;
+      transition: color 0.15s ease-in; }
+      .topbar-responsive .menu a:hover {
+        color: #c6d1d8; }
+      @media screen and (max-width: 39.9375em) {
+        .topbar-responsive .menu a {
+          padding: 0.875rem 0; } }
+    .topbar-responsive .menu .topbar-responsive-button {
+      color: #fefefe;
+      border-color: #fefefe;
+      border-radius: 5000px;
+      transition: color 0.15s ease-in, border-color 0.15s ease-in; }
+      .topbar-responsive .menu .topbar-responsive-button:hover {
+        color: #c6d1d8;
+        border-color: #c6d1d8; }
+      @media screen and (max-width: 39.9375em) {
+        .topbar-responsive .menu .topbar-responsive-button {
+          width: 100%;
+          margin: 0.875rem 0; } }
+  @media screen and (max-width: 39.9375em) {
+    .topbar-responsive {
+      padding: 0.75rem; }
+      .topbar-responsive .top-bar-title {
+        position: relative;
+        width: 100%; }
+        .topbar-responsive .top-bar-title span {
+          position: absolute;
+          right: 0;
+          border: 1px solid #fefefe;
+          border-radius: 5px;
+          padding: 0.25rem 0.45rem;
+          top: 50%;
+          transform: translateY(-50%); }
+          .topbar-responsive .top-bar-title span .menu-icon {
+            margin-bottom: 4px; } }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px; }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white; }
-
-.App-title {
-  font-size: 1.5em; }
-
-.App-intro {
-  font-size: large; }
-
-@keyframes App-logo-spin {
+@keyframes fadeIn {
   from {
-    transform: rotate(0deg); }
+    opacity: 0; }
   to {
-    transform: rotate(360deg); } }
+    opacity: 1; } }
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%); }
+  100% {
+    transform: translateY(0%); } }
+
+@media screen and (max-width: 39.9375em) {
+  .topbar-responsive-links {
+    animation-fill-mode: both;
+    animation-duration: 0.5s;
+    width: 100%;
+    animation: fadeIn 1s ease-in; } }
 
 /* From Zurb Foundation "CSS Masonry Grid" template */
 .masonry-css {
@@ -339,40 +381,83 @@
       width: 100%;
       right: 0; } }
 
-/* Custom CSS */
-#root {
-  /*background-color: black;*/ }
+.App {
+  text-align: center; }
 
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px; }
+
+.App-header {
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
+  color: white; }
+
+.App-title {
+  font-size: 1.5em; }
+
+.App-intro {
+  font-size: large; }
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
+/* Custom CSS */
 .app {
   font-size: 18px;
   max-width: 1920px;
-  width: 100%; }
-
-main {
-  padding-top: 20px;
-  padding-bottom: 20px; }
-  main .msg-sent {
-    margin: 10px 10px 30px;
-    font-size: 20px;
-    color: lightgreen;
-    text-align: center;
-    position: absolute;
-    left: 33.3%;
-    z-index: 10;
-    top: 25px; }
-    main .msg-sent.hidden {
-      display: none; }
-  main .page-heading {
+  width: 100%;
+  /* CMS content */ }
+  .app main {
+    padding-top: 20px;
+    padding-bottom: 20px; }
+    .app main .msg-sent {
+      margin: 10px 10px 30px;
+      font-size: 20px;
+      color: lightgreen;
+      text-align: center;
+      position: absolute;
+      left: 33.3%;
+      z-index: 10;
+      top: 25px; }
+      .app main .msg-sent.hidden {
+        display: none; }
+    .app main .page-heading {
+      padding: 0 20px 10px; }
+  .app h6 {
+    margin: 1.0em 0 0.5em;
+    font-weight: inherit;
+    font-size: 0.67em;
+    text-transform: uppercase;
+    letter-spacing: 0.1em; }
+    .app h6 strong {
+      font-size: 1.5em; }
+  .app .hidden {
+    color: #fff;
+    display: none; }
+  .app .content-container {
     padding: 0 20px 10px; }
+    .app .content-container__head {
+      padding: 0; }
+    .app .content-container__head, .app .content-container__body {
+      background-color: #fefefe; }
+    .app .content-container__body {
+      padding: 20px; }
+      .app .content-container__body ul li {
+        list-style: square; }
+  .app .da-membership-badge {
+    margin: 0 auto;
+    width: 217px; }
 
-h6 {
-  margin: 1.0em 0 0.5em;
-  font-weight: inherit;
-  font-size: 0.67em;
-  text-transform: uppercase;
-  letter-spacing: 0.1em; }
-  h6 strong {
-    font-size: 1.5em; }
+/* Zurb Foundation building blocks overrides */
+.top-bar.logo.topbar-responsive .top-bar-title {
+  margin: 0; }
+  .top-bar.logo.topbar-responsive .top-bar-title a img {
+    max-width: 350px; }
 
 .app ul.menu li a.active {
   background-color: #2c3840;
@@ -382,27 +467,6 @@ h6 {
 .menu.simple a {
   background-color: #2c3840;
   padding: 0.7rem 1rem; }
-
-.form-container {
-  width: 70%;
-  margin: 0 auto; }
-
-.top-bar.logo.topbar-responsive .top-bar-title {
-  margin: 0; }
-  .top-bar.logo.topbar-responsive .top-bar-title a img {
-    max-width: 350px; }
-
-/* CMS content */
-.content-container {
-  padding: 0 20px 10px; }
-  .content-container__head {
-    padding: 0; }
-  .content-container__head, .content-container__body {
-    background-color: #fefefe; }
-  .content-container__body {
-    padding: 20px; }
-    .content-container__body ul li {
-      list-style: square; }
 
 .callout {
   border: 1px solid #eee;
@@ -442,11 +506,6 @@ h6 {
       list-style: square;
       word-wrap: break-word; }
 
-.da-membership-badge {
-  margin: 0 auto;
-  width: 217px;
-  /* background-color: $main-bg-color; */ }
-
 .social-footer {
   background-color: #2c3840;
   color: #fefefe; }
@@ -455,18 +514,21 @@ h6 {
   .social-footer p {
     margin-bottom: 0; }
 
+.form-container {
+  width: 70%;
+  margin: 0 auto; }
+
 .recaptcha {
   margin: 10px 0; }
 
-/* From Zurb Foundation "Popup Contact Form" template */
 .contact-panel .contact-panel-actions {
   margin-top: 10px; }
 
-.hidden {
-  color: #fff;
-  display: none; }
+.ScrollUpButton__Container {
+  bottom: 40px !important; }
 
 /* Media queries */
+/* Small only (up to 639px) */
 @media screen and (max-width: 39.9375em) {
   main .msg-sent {
     margin: 0 0 20px;
@@ -492,3 +554,47 @@ h6 {
       font-size: 15px; }
     .medium-up-2 > .column .flip-card-inner-back .button.success, .medium-up-2 > .columns .flip-card-inner-back .button.success {
       font-size: 14px; } }
+
+/* Medium - only affects medium screens and smaller */
+@media screen and (max-width: 63.9375em) and (orientation: landscape) {
+  .app ul.menu li {
+    margin: 0 2px; } }
+
+@media screen and (max-width: 63.9375em) and (orientation: landscape) {
+  .topbar-responsive {
+    padding: 1rem; } }
+
+@media screen and (max-width: 63.9375em) {
+  .top-bar.logo.topbar-responsive .top-bar-title a img {
+    max-width: 250px; }
+  .topbar-responsive-links .menu .button {
+    font-size: .7rem; } }
+  @media screen and (max-width: 63.9375em) and (orientation: landscape) {
+    .topbar-responsive-links .menu .button {
+      font-size: .6rem;
+      padding: .5rem; } }
+
+@media screen and (max-width: 63.9375em) {
+  .callout__body p {
+    font-size: 16px;
+    line-height: 1.5; } }
+
+/* Google ReCaptcha & contact panel */
+@media screen and (min-width: 40em) and (max-width: 63.9375em) {
+  .contact-panel {
+    height: 300px;
+    bottom: -300px; }
+    .contact-panel form label {
+      font-size: .7rem; }
+    .contact-panel form input {
+      height: 1.5rem;
+      margin: 0 0 .4rem; }
+  .recaptcha {
+    max-height: 45px; }
+    .recaptcha div {
+      transform: scale(0.87);
+      -webkit-transform: scale(0.87);
+      transform-origin: 0 0;
+      -webkit-transform-origin: 0 0; } }
+
+/* Large and up */
