--- a/src/App.scss
+++ b/src/App.scss
@@ -32,514 +32,76 @@ $box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !import
   to { transform: rotate(360deg); }
 }
 
-/* From Zurb Foundation "CSS Masonry Grid" template */
-
-$masonry-css-column-gap: $global-margin;
-
-.masonry-css {
-  column-count: 1;
-  column-gap: $masonry-css-column-gap;
-
-  @include breakpoint(400px) {
-    column-count: 2;
-  }
-
-  @include breakpoint(600px) {
-    column-count: 3;
-  }
-
-  @include breakpoint(800px) {
-    column-count: 4;
-  }
-
-  @include breakpoint(1100px) {
-    column-count: 5;
-  }
-}
-
-.masonry-css-item {
-  break-inside: avoid;
-  margin-bottom: $masonry-css-column-gap;
-}
-
-/* From Zurb Foundation "Portfolio Hero Header With Logo" template */
-
-$portfolio-hero-header-background-color: $light-gray;
-
-.portfolio-hero-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: $portfolio-hero-header-background-color;
-  padding: 2rem 0;
-}
-
-.portfolio-hero-header-description {
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-  margin: 0;
-
-  li {
-    flex: 1 0 200px;
-    text-align: center;
-    padding: 0 1.25rem;
-    position: relative;
-    white-space: nowrap;
-
-    &:before {
-      content: "*";
-      position: absolute;
-      left: 0;
-      top: 5px;
-    }
-
-    &:first-child:before {
-      content: "";
-    }
-  }
-}
-
-.portfolio-hero-header-menu {
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-  margin: 0;
-
-  li {
-    margin: 1.25rem;
-
-    a {
-      padding-left: 1.875rem;
-      padding-right: 1.875rem;
-    }
-  }
-}
-
-/* From Zurb Foundation "Top Bar with Animation" template */
-
-$topbar-responsive-bg: #2c3840;
-$topbar-responsive-animation-type: fade-in; // or use slide-down or none
-
-.topbar-responsive {
-  background: $topbar-responsive-bg;
-  padding: 1rem 1.5rem;
-
-  .topbar-responsive-logo {
-    color: $white;
-    vertical-align: middle;
-  }
-
-  .menu {
-    background: $topbar-responsive-bg;
-
-    li:last-of-type {
-      margin-right: 0;
-    }
-
-    a {
-      color: $white;
-      transition: color 0.15s ease-in;
-
-      &:hover {
-        color: lighten($topbar-responsive-bg, 60%);
-      }
-
-      @media screen and (max-width: 39.9375em) {
-        padding: 0.875rem 0;
-      }
-    }
-
-    .topbar-responsive-button {
-      color: $white;
-      border-color: $white;
-      border-radius: 5000px;
-      transition: color 0.15s ease-in, border-color 0.15s ease-in;
-
-      &:hover {
-        color: lighten($topbar-responsive-bg, 60%);
-        border-color: lighten($topbar-responsive-bg, 60%);
-      }
-
-      @media screen and (max-width: 39.9375em) {
-        width: 100%;
-        margin: 0.875rem 0;
-      }
-    }
-  }
-
-   @media screen and (max-width: 39.9375em) {
-     padding: 0.75rem;
-
-    .top-bar-title {
-      position: relative;
-      width: 100%;
-
-      span {
-        position: absolute;
-        right: 0;
-        border: 1px solid $white;
-        border-radius: 5px;
-        padding: 0.25rem 0.45rem;
-        top: 50%;
-        transform: translateY(-50%);
-
-        .menu-icon {
-          margin-bottom: 4px;
-        }
-      }
-    }
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity:0;
-  } to {
-    opacity:1;
-  }
-}
-
-@keyframes slideDown {
-  0% {
-    transform: translateY(-100%);
-  }
-  100% {
-    transform: translateY(0%);
-  }
-}
-
-@include breakpoint(small only) {
-  .topbar-responsive-links {
-    animation-fill-mode: both;
-    animation-duration: 0.5s;
-    width: 100%;
-
-    @if $topbar-responsive-animation-type == slide-down {
-      animation: slideDown 1s ease-in;
-    } @else if $topbar-responsive-animation-type == fade-in {
-      animation: fadeIn 1s ease-in;
-    } @else {
-      animation: none;
-    }
-  }
-}
-
-/* From Zurb Foundation "Social Media Footer" template */
-
-.social-footer {
-  padding: 1rem;
-  background: $dark-gray;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  .social-footer-icons {
-    li:last-of-type {
-      margin-right: 0;
-    }
-
-    .fa {
-      font-size: 1.3rem;
-      color: $white;
-
-      &:hover {
-        color: darken($dark-gray, 25%);
-        transition: color 0.3s ease-in;
-      }
-    }
-  }
-}
-
-/* Zurb Foundation "Flip Card" template */
-
-$flip-card-height: rem-calc(320);
-$flip-card-transition-speed: 0.6s;
-
-.flip-card {
-  perspective: 1000px;
-  border: 0;
-  background: transparent;
-
-  &:hover .flip-card-inner,
-  &.hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-}
-
-.flip-card,
-.flip-card-inner-front,
-.flip-card-inner-back {
-  width: 100%;
-  height: $flip-card-height;
-}
-
-.flip-card-inner {
-  transition: $flip-card-transition-speed;
-  transform-style: preserve-3d;
-  position: relative;
-  backface-visibility: hidden;
-}
-
-.flip-card-inner-front,
-.flip-card-inner-back {
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-// non-essential front and rear styles
-.flip-card-inner-front {
-  background: url(https://images.pexels.com/photos/179124/pexels-photo-179124.jpeg?w=940&h=650&auto=compress&cs=tinysrg) 0 0 no-repeat;
-  z-index: 2;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  span {
-    width: 100%;
-    text-align: center;
-    background: rgba($white, 0.8);
-    padding: 0.25rem 0;
-    font-size: 1.25rem;
-    font-weight: bold;
-  }
-}
-
-.flip-card-inner-back {
-  transform: rotateY(180deg);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-  background: $medium-gray;
-  padding: 1rem;
-}
-
-.flip-card-inner-back-title {
-  font-weight: bold;
-}
-
-.flip-card-inner-back-text {
-  line-height: 1.3;
-}
-
-.row {
-  max-width: 75rem;
-  margin-right: auto;
-  margin-left: auto;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
-}
-
-.small-up-1 {
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-
-.medium-up-2 {
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-
-.small-up-1 > .column, .small-up-1 > .columns {
-  -webkit-flex: 0 0 100%;
-  -ms-flex: 0 0 100%;
-  flex: 0 0 100%;
-  max-width: 100%;
-}
-
-.medium-up-2 > .column, .medium-up-2 > .columns {
-  -webkit-flex: 0 0 50%;
-  -ms-flex: 0 0 50%;
-  flex: 0 0 50%;
-  max-width: 50%;
-}
-
-.column, .columns {
-  -webkit-flex: 1 1 0px;
-  -ms-flex: 1 1 0px;
-  flex: 1 1 0px;
-  padding-right: 0.625rem;
-  padding-left: 0.625rem;
-  min-width: initial;
-}
-
-.column, .columns {
-  padding-right: 0.9375rem;
-  padding-left: 0.9375rem;
-}
-
-.flip-card-inner-front {
-  background-size: cover;
-}
-
-/* From Zurb Foundation "Popup Contact Form" template */
-
-$contact-panel-bg: $black;
-$contact-panel-height: 375px;
-$contact-panel-width: 350px;
-$contact-panel-right-offset: 20px;
-$contact-panel-button-arrow: ⥣;
-
-.contact-panel-button {
-  background: $contact-panel-bg;
-  color: $white;
-  width: auto;
-  padding: 0.25rem 1.25rem;
-  text-align: center;
-  position: absolute;
-  top: -30px;
-  right: 20px;
-  transition: background 0.25s ease-in-out;
-
-  &:after {
-    content: "⥣";
-    margin-left: 5px;
-  }
-
-  &:hover {
-    background: lighten($contact-panel-bg, 10%);
-    color: lighten($contact-panel-bg, 90%);
-  }
-}
-
-.is-active .contact-panel-button:after {
-  content: "⥥";
-}
-
-.contact-panel {
-  padding: 1rem;
-  z-index: 1;
-  background: $contact-panel-bg;
-  width: $contact-panel-width;
-  height: $contact-panel-height;
-  position: fixed;
-  bottom: -$contact-panel-height;
-  right: $contact-panel-right-offset;
-  transition: bottom 0.5s ease-in-out;
-
-  label {
-    color: $white;
-    width: 100%;
-  }
-
-  input[type="text"],
-  input[type="email"],
-  textarea {
-    background: lighten($contact-panel-bg, 15%);
-    border: $contact-panel-bg;
-    transition: background 0.3s ease-in-out;
-
-    &:focus {
-      background: $white;
-    }
-  }
-
-  .contact-panel-actions {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .submit-button {
-    margin-bottom: 0;
-  }
-
-  .button {
-    margin: 0 0 0 .5rem;
-  }
-
-  .cancel-button {
-    margin-bottom: 0;
-    padding: 0.75rem 1rem;
-    color: $white;
-    transition: background 0.25s ease-in-out;
-
-    &:hover {
-      background: lighten($contact-panel-bg, 10%);
-      color: lighten($contact-panel-bg, 90%);
-    }
-  }
-
-  &.is-active {
-    bottom: 0;
-  }
-
-  @include breakpoint(small only) {
-    width: 100%;
-    right: 0;
-  }
-}
-
 /* Custom CSS */
-
-#root {
-  /*background-color: black;*/
-}
 
 .app {
   font-size: 18px;
   max-width: 1920px;
   width: 100%;
-}
-
-main {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  //background-color: $main-bg-color;
-  .msg-sent {
-    margin: 10px 10px 30px;
-    font-size: 20px;
-    color: lightgreen;
-    text-align: center;
-    position: absolute;
-    left: 33.3%;
-    z-index: 10;
-    top: 25px;
-    &.hidden {
-      display: none;
+  main {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    .msg-sent {
+      margin: 10px 10px 30px;
+      font-size: 20px;
+      color: lightgreen;
+      text-align: center;
+      position: absolute;
+      left: 33.3%;
+      z-index: 10;
+      top: 25px;
+      &.hidden {
+        display: none;
+      }
+    }
+    .page-heading {
+      padding: 0 20px 10px;
     }
   }
-  .page-heading {
+
+  h6 {
+    margin: 1.0em 0 0.5em;
+    font-weight: inherit;
+    font-size: 0.67em;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    strong {
+      font-size: 1.5em;
+    }
+  }
+
+  .hidden {
+    color: #fff;
+    display: none;
+  }
+
+  /* CMS content */
+
+  .content-container {
     padding: 0 20px 10px;
+    &__head {
+      padding: 0;
+    }
+    &__head, &__body {
+      background-color: $white;
+    }
+    &__body {
+      padding: 20px;
+      ul {
+        li {
+          list-style: square;
+        }
+      }
+    }
+  }
+
+  .da-membership-badge {
+    margin: 0 auto;
+    width: 217px;
   }
 }
 
-h6 {
-  margin: 1.0em 0 0.5em;
-  font-weight: inherit;
-  font-size: 0.67em;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  strong {
-    font-size: 1.5em;
-  }
-}
-
-.app ul.menu li a.active {
-  background-color: $topbar-responsive-bg;
-  border: 1px solid $white;
-  color: $white;
-}
-
-.menu.simple a {
-  background-color: $topbar-responsive-bg;
-  padding: 0.7rem 1rem;
-}
-
-.form-container {
-  width: 70%;
-  margin: 0 auto;
-}
+/* Zurb Foundation building blocks overrides */
 
 .top-bar {
   &.logo {
@@ -556,25 +118,15 @@ h6 {
   }
 }
 
-/* CMS content */
+.app ul.menu li a.active {
+  background-color: $topbar-responsive-bg;
+  border: 1px solid $white;
+  color: $white;
+}
 
-.content-container {
-  //background-color: $main-bg-color;
-  padding: 0 20px 10px;
-  &__head {
-    padding: 0;
-  }
-  &__head, &__body {
-    background-color: $white;
-  }
-  &__body {
-    padding: 20px;
-    ul {
-      li {
-        list-style: square;
-      }
-    }
-  }
+.menu.simple a {
+  background-color: $topbar-responsive-bg;
+  padding: 0.7rem 1rem;
 }
 
 .callout {
@@ -630,12 +182,6 @@ h6 {
   }
 }
 
-.da-membership-badge {
-  margin: 0 auto;
-  width: 217px;
-  /* background-color: $main-bg-color; */
-}
-
 .social-footer {
   background-color: $topbar-responsive-bg;
   color: $white;
@@ -647,11 +193,14 @@ h6 {
   }
 }
 
+.form-container {
+  width: 70%;
+  margin: 0 auto;
+}
+
 .recaptcha {
   margin: 10px 0;
 }
-
-/* From Zurb Foundation "Popup Contact Form" template */
 
 .contact-panel {
   .contact-panel-actions {
@@ -659,14 +208,14 @@ h6 {
   }
 }
 
-.hidden {
-  color: #fff;
-  display: none;
+.ScrollUpButton__Container {
+  bottom: 40px !important;
 }
 
 /* Media queries */
+/* Small only (up to 639px) */
 
-@media screen and (max-width: 39.9375em) {
+@include breakpoint(small only) {
   main {
     .msg-sent {
       margin: 0 0 20px;
@@ -714,3 +263,72 @@ h6 {
     }
   }
 }
+
+/* Medium - only affects medium screens and smaller */
+
+@include breakpoint(medium down) {
+  .app ul.menu li {
+    @include breakpoint(landscape) {
+      margin: 0 2px;
+    }
+  }
+  .topbar-responsive {
+    @include breakpoint(landscape) {
+      padding: 1rem;
+    }
+  }
+  .top-bar.logo.topbar-responsive .top-bar-title a img {
+    max-width: 250px;
+  }
+  .topbar-responsive-links {
+    .menu {
+      .button {
+        font-size: .7rem;
+        @include breakpoint(landscape) {
+          font-size: .6rem;
+          padding: .5rem;
+        }
+      }
+    }
+  }
+  .callout__body p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
+
+/* Google ReCaptcha & contact panel */
+
+@include breakpoint(medium only landscape) {
+  $contact-panel-height: 300px;
+  .contact-panel {
+    height: $contact-panel-height;
+    bottom: -$contact-panel-height;
+    form {
+      //margin-top: 95px;
+      label {
+        font-size: .7rem;
+      }
+      input {
+        height: 1.5rem;
+        margin: 0 0 .4rem;
+      }
+    }
+  }
+  // Tips to style ReCaptcha taken from here:
+  // https://stackoverflow.com/questions/27713505/recaptcha-api-v2-styling
+  // https://geekgoddess.com/how-to-resize-the-google-nocaptcha-recaptcha/  
+  .recaptcha {
+    max-height: 45px;
+    div {
+      transform: scale(0.87);
+      -webkit-transform: scale(0.87);
+      transform-origin: 0 0;
+      -webkit-transform-origin: 0 0;
+    }
+  }
+}
+
+/* Large and up */
+
+//@include breakpoint(large) {}
