--- a/src/shared.scss
+++ b/src/shared.scss
@@ -1,5 +1,5 @@
-@import "node_modules/foundation-sites/scss/_global.scss";
-@import "node_modules/foundation-sites/scss/settings/_settings.scss";
+//@import "node_modules/foundation-sites/scss/_global.scss";
+//@import "node_modules/foundation-sites/scss/settings/_settings.scss";
 //@import "node_modules/foundation-sites/scss/prototype/_spacing.scss";
 //@import "node_modules/foundation-sites/scss/prototype/_separator.scss";
 //@import "node_modules/foundation-sites/scss/forms/_progress.scss";
@@ -12,3 +12,5 @@
 //@import "node_modules/foundation-sites/scss/components/_card.scss";
 //@import "node_modules/foundation-sites/scss/components/_button.scss";
 ////@import "assets/foundation/scss/topbar-responsive.scss";
+//@import "assets/scss/foundation/topbar-responsive/topbar-responsive.scss";
+@import "assets/scss/foundation/building-blocks/_building-blocks.scss";
