--- a/src/App.scss
+++ b/src/App.scss
@@ -291,9 +291,33 @@ $box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !import
       }
     }
   }
+  .flip-card {
+    @include breakpoint(landscape) {
+      .flip-card-inner-back-title {
+        font-size: 1.1875rem;
+        line-height: 1.3;
+      }
+      .flip-card-inner-back-text {
+        font-size: 16px;
+        line-height: 1.2;
+      }
+    }
+  }
   .callout__body p {
     font-size: 16px;
     line-height: 1.5;
+  }
+}
+
+/*
+ * External links aren't working on Chrome (Desktop and mobile).
+ * Setting .flip-card-inner "backface-visibility: visible;" fix the issue.
+ * Solution taken from here: http://foundation.zurb.com/forum/posts/53552#comment_38997
+ */
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  .flip-card-inner {
+    backface-visibility: visible;
   }
 }
 
@@ -315,9 +339,11 @@ $box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !import
       }
     }
   }
-  // Tips to style ReCaptcha taken from here:
-  // https://stackoverflow.com/questions/27713505/recaptcha-api-v2-styling
-  // https://geekgoddess.com/how-to-resize-the-google-nocaptcha-recaptcha/  
+  /*
+   * Tips to style ReCaptcha taken from here:
+   * https://stackoverflow.com/questions/27713505/recaptcha-api-v2-styling
+   * https://geekgoddess.com/how-to-resize-the-google-nocaptcha-recaptcha/
+   */  
   .recaptcha {
     max-height: 45px;
     div {
