--- a/src/App.scss
+++ b/src/App.scss
@@ -310,9 +310,9 @@ $box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !import
 }
 
 /*
- * External links aren't working on Chrome (Desktop and mobile).
- * Setting .flip-card-inner "backface-visibility: visible;" fix the issue.
- * Solution taken from here: http://foundation.zurb.com/forum/posts/53552#comment_38997
+ * External links aren't working on the "Flip Card" building block on Chrome (Desktop and mobile).
+ * Adjusting the .flip-card-inner CSS selector to "backface-visibility: visible;" fixed the issue.
+ * This solution was suggested here: http://foundation.zurb.com/forum/posts/53552#comment_38997
  */
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
