Added "⇑" in a media query to fix issue with "content: \2963" html hex entity not rendering on Android Chrome.

--- a/src/App.css
+++ b/src/App.css
@@ -584,7 +584,11 @@
 @media screen and (max-width: 63.9375em) {
   .callout__body p {
     font-size: 16px;
-    line-height: 1.5; } }
+    line-height: 1.5; }
+  .contact-panel-button::after {
+    content: "⇑"; }
+  .is-active .contact-panel-button::after {
+    content: "⇓"; } }
 
 /*
  * External links aren't working on the "Flip Card" building block on Chrome (Desktop and mobile).
