--- a/src/App.scss
+++ b/src/App.scss
@@ -306,6 +306,12 @@ $box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !import
     font-size: 16px;
     line-height: 1.5;
   }
+  .contact-panel-button::after {
+    content: "⇑";
+  }
+  .is-active .contact-panel-button::after {
+    content: "⇓";
+  }
 }
 
 /*
