--- a/src/App.css
+++ b/src/App.css
@@ -578,11 +578,15 @@
     font-size: 1.1875rem;
     line-height: 1.3; }
   .flip-card .flip-card-inner-back-text {
-    font-size: 16px;
-    line-height: 1.2; } }
+    font-size: 14px;
+    line-height: 1.2; }
+    .flip-card .flip-card-inner-back-text p {
+      font-size: inherit; } }
 
 @media screen and (max-width: 63.9375em) {
-  .callout__body p {
+  .callout h1 {
+    font-size: 16px; }
+  .callout__body, .callout__body p {
     font-size: 16px;
     line-height: 1.5; }
   .contact-panel-button::after {
